<resources>
    <string name="app_name">PantallaTareas</string>
    <string name="AcercaDe">Acerca de...</string>
    <string name="Salir">Salir</string>
    <string name="agregarT">AgregarTarea</string>
    <string name="priori">Prioritarias</string>
    <string name="TextoInicial">Tus tareas, tu ritmo, tu éxito.</string>
    <string name="btInicio">Empezar</string>
    <string name="anyadirTarea">Añadir Tarea</string>
    <string name="descripcion">Descripción</string>
    <string name="btVolver">Volver</string>
    <string name="btGuardar">Guardar</string>
    <string name="nombreTarea">Nombre Tarea: </string>
    <string name="fechaini">Fecha de Inicio: </string>
    <string name="fechafin">Fecha de Fin: </string>
    <string name="estadoTarea">Estado de la tarea: </string>
    <string name="btCancelar">Cancelar</string>
    <string name="btSiguiente">Siguiente</string>
    <string name="prio">Prioritaria: </string>
    <string name="titulo">Título de la tarea</string>
    <string name="quedan">Quedan </string>
    <string name="numero"> 00 </string>
    <string name="dias"> días</string>
    <string name="tarea_edit">Tarea editada</string>
    <string name="action_canceled">Acción cancelada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="EstadoBarra">
        <item>Seleccione</item>
        <item>No iniciada</item>
        <item>Iniciada</item>
        <item>Avanzada</item>
        <item>Casi finalizada</item>
        <item>Finalizada</item>
    </string-array>


    <string name="title_activity_settings" translatable="false">Preferencias</string>

    <!-- Preferencias de Visualización -->
    <string name="visual" translatable="false">Visualización</string>
    <string name="oscuro" translatable="false">Tema Aplicación</string>
    <string name="letra" translatable="false">Tamaño de la letra</string>

    <!-- Preferncias de Ordenación -->
    <string name="ordenacion" translatable="false">Ordenación</string>
    <string name="criterio" translatable="false">Seleccione el criterio para ordenar</string>
    <string name="orden" translatable="false">Orden</string>

    <!-- Preferencias de Almacenamiento -->
    <string name="almacenamiento" translatable="false">Almacenamiento</string>
    <string name="tarjetaSD" translatable="false">Alamcenar en Tarjeta SD</string>
    <string name="limpeza" translatable="false">Introduce el número para la limpieza de tareas</string>
    <string name="bd" translatable="false">Base de Datos</string>
    <string name="bdEx" translatable="false">Base de datos Externa</string>
    <string name="nombreBD" translatable="false">Nombre de la BD</string>
    <string name="ipBD" translatable="false">IP de la BD</string>
    <string name="puertoBD" translatable="false">Puerto de la BD</string>
    <string name="usuarioBD" translatable="false">Usuario BD</string>
    <string name="contraBD" translatable="false">Contraseña BD</string>



    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->

    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
</resources>