<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ListadoTareasActivity">


    <item
        android:id="@+id/bt_preferencias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Preferencias" />
    <item
        android:id="@+id/AcercaDe"
        android:title="@string/AcercaDe"
        app:showAsAction="never" />

    <item
        android:id="@+id/Salir"
        android:title="@string/Salir"
        app:showAsAction="never" />

    <item
        android:id="@+id/AgreTarea"
        android:icon="@drawable/baseline_add_task_24"
        android:title="@string/agregarT"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/Prio"
        android:icon="@drawable/baseline_star_outline_24"
        android:title="@string/priori"
        app:showAsAction="ifRoom" />


</menu>