<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/visual">

        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:title="@string/oscuro"
            android:key="modo_oscuro"/>
        <ListPreference
            app:defaultValue="medium"
            app:entries="@array/tipoletraSelec"
            app:summary="Seleccione el tamaño de la letra"
            app:entryValues="@array/tipo_letra_valores"
            app:key="tipoLetra"
            app:title="@string/letra"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Ordenación">

        <ListPreference
            app:entries="@array/criterio"
            app:summary="Seleccione el criterio"
            app:entryValues="@array/criterio_valores"
            app:key="tipoCriterio"
            app:title="@string/criterio"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>