<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.FragmentoUno">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTetxtTituloTarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="128dp"
            android:text="@string/prio"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/cbPrioritaria"
            app:layout_constraintEnd_toStartOf="@+id/cbPrioritaria"
            app:layout_constraintTop_toTopOf="@+id/cbPrioritaria"
            app:layout_constraintVertical_bias="0.551" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/estadoTarea"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/spinerProgreso"
            app:layout_constraintEnd_toStartOf="@+id/spinerProgreso"
            app:layout_constraintTop_toTopOf="@+id/spinerProgreso"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/labelDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/nombreTarea"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/editTetxtTituloTarea"
            app:layout_constraintEnd_toStartOf="@+id/editTetxtTituloTarea"
            app:layout_constraintTop_toTopOf="@+id/editTetxtTituloTarea"
            app:layout_constraintVertical_bias="0.695" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/fechaini"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/editTextFechaCreacion"
            app:layout_constraintEnd_toStartOf="@+id/editTextFechaCreacion"
            app:layout_constraintTop_toTopOf="@+id/editTextFechaCreacion"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/editTextFechaFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFechaCreacion" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:text="@string/fechafin"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/editTextFechaFinal"
            app:layout_constraintEnd_toStartOf="@+id/editTextFechaFinal"
            app:layout_constraintTop_toTopOf="@+id/editTextFechaFinal"
            app:layout_constraintVertical_bias="0.423" />

        <Spinner
            android:id="@+id/spinerProgreso"
            android:layout_width="155dp"
            android:layout_height="22dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="68dp"
            android:entries="@array/EstadoBarra"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFechaFinal" />

        <CheckBox
            android:id="@+id/cbPrioritaria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="124dp"
            android:text="Sí"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinerProgreso" />

        <EditText
            android:id="@+id/editTextFechaCreacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTetxtTituloTarea" />

        <Button
            android:id="@+id/bt_siguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="264dp"
            android:layout_marginBottom="152dp"
            android:text="@string/btSiguiente"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/bt_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="152dp"
            android:text="@string/btCancelar"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>